--- a/arch/arm64/boot/dts/amlogic/meson-gx.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-gx.dtsi
@@ -30,15 +30,17 @@
 		};
 
 		/* 2 MiB reserved for ARM Trusted Firmware (BL31) */
-		secmon_reserved: secmon@10000000 {
+		secmon_reserved: linux,secmon {
+			compatible = "amlogic, aml_secmon_memory";
 			reg = <0x0 0x10000000 0x0 0x200000>;
 			no-map;
 		};
 
-		/* Alternate 3 MiB reserved for ARM Trusted Firmware (BL31) */
-		secmon_reserved_alt: secmon@5000000 {
-			reg = <0x0 0x05000000 0x0 0x300000>;
+		/* 32 MiB reserved for TEE (BL32) */
+		secos_reserved: linux,secos {
+			reg = <0x0 0x05300000 0x0 0x2000000>;
 			no-map;
+			status = "disabled";
 		};
 
 		linux,cma {
